--- a/sanare-app/tsconfig.app.json
+++ b/sanare-app/tsconfig.app.json
@@ -29,5 +29,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "api/services", "api/controllers"]
 }
