--- a/sanare-app/api/package.json
+++ b/sanare-app/api/package.json
@@ -13,10 +13,10 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
-    "keycloak-connect": "^26.1.1",
     "morgan": "^1.10.0",
     "pg": "^8.16.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
