--- a/sanare-app/docker/dockerfile
+++ b/sanare-app/docker/dockerfile
@@ -11,11 +11,11 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-# Build TypeScript (if needed)
+# Build TypeScript
 RUN npx tsc
 
 # Expose API port
 EXPOSE 3001
 
-# Start the API
-CMD ["npm", "run", "start"]
+# Start the API using compiled JS
+CMD ["node", "dist/server.js"]
